--- a/index.html
+++ b/index.html
@@ -211,27 +211,7 @@
     <!-- 黒字経営4WD：車の四輪レイアウト -->
     <div class="wheel" role="group" aria-label="黒字経営4WD：四輪レイアウト">
       <div class="hub" aria-label="4WDハブ・車画像">
-        <!-- SVGをデフォルト表示（常時見える）。PNGが読み込めたら切替 -->
-        <svg id="car-fallback" viewBox="0 0 140 140" aria-hidden="true" focusable="false" style="display:block">
-          <rect x="45" y="8" width="50" height="124" rx="16" fill="currentColor"/>
-          <path d="M48 66c0-2 2-4 4-4h2v8h-2c-2 0-4-2-4-4Z" fill="currentColor"/>
-          <path d="M92 66c0-2-2-4-4-4h-2v8h2c2 0 4-2 4-4Z" fill="currentColor"/>
-          <path d="M60 52 h20 l6 6 v6 l-6 6 h-20 l-6 -6 v-6 z" fill="#ffffff" fill-opacity="0.96"/>
-          <path d="M60 96 h20 l6 6 v6 l-6 6 h-20 l-6 -6 v-6 z" fill="#ffffff" fill-opacity="0.96"/>
-          <ellipse cx="60" cy="19" rx="6" ry="4" fill="#ffffff"/>
-          <ellipse cx="80" cy="19" rx="6" ry="4" fill="#ffffff"/>
-          <rect x="12" y="26" width="26" height="32" fill="currentColor"/>
-          <rect x="12" y="86" width="26" height="32" fill="currentColor"/>
-          <rect x="102" y="26" width="26" height="32" fill="currentColor"/>
-          <rect x="102" y="86" width="26" height="32" fill="currentColor"/>
-          <rect x="38" y="40" width="7" height="8" fill="currentColor"/>
-          <rect x="38" y="100" width="7" height="8" fill="currentColor"/>
-          <rect x="95" y="40" width="7" height="8" fill="currentColor"/>
-          <rect x="95" y="100" width="7" height="8" fill="currentColor"/>
-        </svg>
-        <img class="carimg" alt="4WD car" src="./四輪駆動.png" decoding="async" loading="lazy"
-             onload="document.getElementById('car-fallback').style.display='none'; this.style.display='block';"
-             onerror="this.style.display='none'; document.getElementById('car-fallback').style.display='block';"/>
+        <img class="carimg" alt="4WD car" src="./四輪駆動.png" decoding="async" loading="lazy"/>
       </div>
 
       <!-- Four corner tool links (as siblings of hub, to avoid overlap) -->
@@ -413,7 +393,7 @@
 
   <footer>
     <div>当ページはリンクポータルです。各ツールの最終確認は必ず実務手順・法令に照らして行ってください。</div>
-    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r24</strong> / 最終更新: 2025-09-21</div>
+    <div style="margin-top:8px">© Matsumoto Kaikei — Tools Portal <strong>r25</strong><br><small>最終更新: 2025-09-22</small> / 最終更新: 2025-09-21</div>
   </footer>
 
   <div class="toast" id="toast">URLをコピーしました</div>
